--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.13"
 icecream = "^2.1.3"
+tqdm = "^4.67.1"
 
 
 [tool.poetry.group.dev.dependencies]
